update blog post and add images.

--- a/content/fronteers/conf_2016.md
+++ b/content/fronteers/conf_2016.md
@@ -31,18 +31,18 @@ description = "Thursday 8 and Friday 9 October was the epic Fronteers conference
         <li>Mark up should contain all content.</li>
         <li>Content should be plain text in the markup</li>
         <li>Enhanced layout can be provided by css. Without css the content should still be accessible.</li>
-        <li>Enhanced behavior can be provided by javascript. should also work without javascript enabled.</li>
+        <li>Enhanced behavior can be provided by javascript. Should also work without javascript enabled.</li>
         <li>Web browser preferences of the user should be respected.</li>
     </ol>
     <p>
-        Things can go wrong when javascript is disabled or when a feature is not
-        available yet in the browser. Or when the browser does not understand the
+        Things can go wrong when javascript is disabled, when a feature is not
+        available yet in the browser or when the browser does not understand the
         semantic meaning (e.g. html5 tags).
     </p>
     <p>
         These issues can be fixed by using feature detection, polyfill for unsupported
         features, role attributes etc. <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@supports">CSS Feature Queries</a>
-        is also in progress, At time of writing it is available in all latest browsers, except for IE.
+        is also in progress. At time of writing it is available in all latest browsers, except for IE.
     </p>
     <h2>Data visualisations and progressive web apps</h2>
     <p>
@@ -50,11 +50,14 @@ description = "Thursday 8 and Friday 9 October was the epic Fronteers conference
         She explained her design process, the issues she encountered and how she solved
         them. During her talk she showed us some beautiful and amazing interactive graphics.
     </p>
+    <figure>
+        <img src="/img/nadieh_bremer.jpg">
+    </figure>
     <p>
         Nolan Lawson talked about progressive web apps, the interesting part of
         the presentation was how to serve offline content and how to use multi-threading.
         The old way for static data is:
-        <a href=="https://www.html5rocks.com/en/tutorials/appcache/beginner/">appCache</a?.
+        <a href=="https://www.html5rocks.com/en/tutorials/appcache/beginner/">appCache</a>.
         The new way: <a href="https://developers.google.com/web/fundamentals/getting-started/primers/service-workers">Cache API</a> (Service workers). For dynamic data the
         old way is <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API/Using_the_Web_Storage_API">localStorage</a> and the new way <a href="http://blogs.shephertz.com/2014/01/14/html5-learn-how-to-use-indexeddb/">IndexedDB</a>.
     </p>
@@ -71,8 +74,11 @@ description = "Thursday 8 and Friday 9 October was the epic Fronteers conference
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/Public_Key_Pinning">PKP</a>: Public Key Pins</li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity">SRI</a>: Sub Resource Integrity</li>
     </ul>
+    <figure>
+        <img src="/img/scott_helme.jpg">
+    </figure>
     <p>
-        Sarah Drasner demonstrated how animations can help the user, she uses the
+        Sarah Drasner demonstrated how animations can help the user. She uses the
         following deployment tools <a href="https://facebook.github.io/react/">react</a>,
         svg and <a href="http://greensock.com/">GSAP</a>. Animations can be used for:
     </p>
@@ -82,6 +88,9 @@ description = "Thursday 8 and Friday 9 October was the epic Fronteers conference
         <li>Spatial awareness</li>
         <li>Immersive animation</li>
     </ul>
+    <figure>
+        <img src="/img/sara_drasner.jpg">
+    </figure>
     <h2>The future</h2>
     <p>
         Peter Gasston elaborates in his talk "Surveying the landscape" the future
@@ -110,6 +119,9 @@ description = "Thursday 8 and Friday 9 October was the epic Fronteers conference
         You can read about <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/pointer-events">CSS pointer events</a>
         and <a href="https://developer.mozilla.org/en-US/docs/Web/API/Pointer_events">javascript pointer events</a> on Mozilla developer site.
     </p>    
+    <figure>
+        <img src="/img/jason_grigsby.jpg">
+    </figure>
     <h2>Accessibility and not Wealthy Western Web</h2>
     <p>
         Leonie Watson demonstrated how to make the web more accessible.
